updates spacing, fixed logo size

--- a/index.css
+++ b/index.css
@@ -6,6 +6,8 @@
     margin: 0 auto;
     margin-top: 20px;
     margin-bottom: 20px;
+    width: 300px;
+    height: 200px;
 }
 
 .header {
@@ -31,6 +33,7 @@ button {
     height: 45px;
     border-radius: 10px;
     background-color: #000000;
+    margin-top: 20px;
     margin-bottom: 40px;
     border: none;
 }
@@ -82,7 +85,6 @@ a.nav-link:active {
     margin-bottom: 75px;
     padding: 0px;
 }
-
 
 
 .container {
